ispCP ω 1.0.1 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2009-04-11 Thomas Häber
	- GUI:
		* Fixed #1788: captcha fontfile not found (with new implemented font loading and LGPL fonts)

2009-04-09 Thomas Häber
	- GUI:
		* Fixed #1783: js-errors
		* code cleanup (coding style, whitespaces ...)
		* reverted r1557 (which was a part revert of r1550) with modifications
		* a lot of HTML updates for more valid (X)HTML
		* fixed wrong HTML size of some icons
		* hardened input-checks.php::clean_html()
		* removed svn property "debian" from root folder

2009-04-03 Benedikt Heintel
	- GUI:
		* Fixed #918: Mail Management UI improvement

2009-03-29 Thomas Häber
	- LANGUAGES:
		* removed unused JavaScript function checkForm()
		* typo: can not -> cannot

2009-03-28 Thomas Häber
	- THEMES:
		* some refactoring of the JavaScript code (better documentation, replace use of eval, delete unused code/functions, merge use of functions, optimized loops ...)
	- GUI:
		* translated german php variables to english
		* optimized loops in GUI PHP code (especially the for loops)

2009-03-26 Thomas Häber
	- GUI:
		* Fixed #1745: Trim hostingplan description on overview page
	- ENGINE:
		* Fixed #1774: Missing secure Ports in ispcp-vrl-traff
		* Fixed #1770: Wrong Port in ispcp-srv-traff

2009-03-25 Thomas Häber
	- GUI:
		* Fixed #1667: It should be possible to (de)activate the log-comment on logon/password ispcp gui footer.
		* Fixed #1767: Incorrect table name 'tickets WHERE ' (regression in SQL code)
		* Fixed #1769: Unknown column ' bytes_in_avail' in 'field list' (regression in SQL code)
		* Fixed #1768: "Back" Button on Domaindetails has no function

2009-03-24 Thomas Häber
	- GUI:
		* Fixed #1762: MySQL Syntax Error (regression)
		* Fixed #1763: Wrong Harddisk Usage

2009-03-24 Benedikt Heintel
	- ENGINE:
		* Fixed #1627: Accented characters in UTF8 encoding Autoreplay message - ispcp-arpl
	- GUI:
		* Fixed #678: deleting a mysql database also deletes the user without askint to.