@@ -1160,3 +1160,32 @@ This user has domain record !<br>First remove the domain from the system! = Dies
 User not terminated! = Benutzer wurde nicht gelöscht!
 Show server load = Zeige Serverauslastung
 Language was removed! = Sprache wurde deinstalliert.
+bg_BG = Bulgarisch
+ca_ES = Katalanisch
+cs_CZ = Tchechisch
+da_DK = Dänisch
+de_DE = Deutsch
+en_GB = Englisch (Britisch)
+es_AR = Spanisch (Argentinien)
+es_ES = Spanisch (Spanien)
+eu_ES = Baskisch
+fi_FI = Finnisch
+fr_FR = Französisch
+gl_ES = Galicisch
+hu_HU = Ungarisch
+it_IT = Italienisch
+ja_JP = Japanisch
+nb_NO = Norwegisch
+nl_NL = Niederländisch
+pl_PL = Polnisch
+pt_BR = Portugisisch (Brasilien)
+pt_PT = Portugisisch (Portugal)
+ro_RO = Romänisch
+ru_RU = Russisch
+sk_SK = Slowakisch
+sv_SE = Schwedisch
+th_TH = Thailändisch
+tr_TR = Türkisch
+uk_UA = Ukrainisch
+zh_CN = Chinesisch (Kurzzeichen)
+zh_HK = Chinesisch (Langzeichen)
